--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
     </div>
     <ul class="comments" id="comments">
       <% @posts.each do |post| %>
-        <li><%= post.comment %><pre><%= "#{post.user.email}  #{time_ago_in_words post.created_at}" %></pre></li>
+        <li><%= post.comment %><pre><%= "#{post.user.email}  #{time_ago_in_words post.created_at} ago" %></pre></li>
       <% end %>
     </ul>
   </div>
