--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-12">
-            <h1><%= link_to "threadly--", root_path %></h1>
+            <h1><%= link_to "threadly", root_path %></h1>
             <% if user_signed_in? %>
               <%= link_to 'Account', edit_user_registration_path , :class => 'btn btn-default su' %>
               <%= link_to 'Sign out', destroy_user_session_path, method: :delete, :class => 'btn btn-default'  %>
